--- a/src/main/resources/templates/ingresarFoto.html
+++ b/src/main/resources/templates/ingresarFoto.html
@@ -21,33 +21,35 @@
 	<title th:text="'Ausys - '+ ${titulo}"></title>
 </head>
 
-<body>
+<body style="background-color: #b1b7b9;">
 	<th:block th:replace="components/navbar :: navbar"></th:block>
 	<div class="container">
-		<h1 th:text="${titulo}"></h1>
-		<div>
-			<form th:if="${val} == 'Desaparecido'" th:action="@{/write/subir/D/} + ${id}" th:object="${foto}"
-				enctype="multipart/form-data" method="POST">
-				<br>
-
-				<th:block th:replace="components/form-foto :: foto"></th:block>
-				<!-- <input type="text" th:name="id" th:field="*{id_peritaje}"> -->
-				<div th:if="${alert}" th:text="${alert}" class="alert alert-danger" role="alert"></div>
-				<br>
-				<input type="submit" value="Siguiente" class="btn btn-primary">
-
-			</form>
-			<form th:if="${val} == 'Peritaje'" th:action="@{/write/subir/P/} + ${id}" th:object="${foto}"
-				enctype="multipart/form-data" method="POST">
-				<br>
-
-				<th:block th:replace="components/form-foto :: foto"></th:block>
-				<!-- <input type="text" th:name="id" th:field="*{id_peritaje}"> -->
-				<div th:if="${alert}" th:text="${alert}" class="alert alert-danger" role="alert"></div>
-				<br>
-				<input type="submit" value="Siguiente" class="btn btn-primary">
-
-			</form>
+		<div class="card" style="padding: 2em;">
+			<h1 th:text="${titulo}"></h1>
+			<div>
+				<form th:if="${val} == 'Desaparecido'" th:action="@{/write/subir/D/} + ${id}" th:object="${foto}"
+					enctype="multipart/form-data" method="POST">
+					<br>
+	
+					<th:block th:replace="components/form-foto :: foto"></th:block>
+					<!-- <input type="text" th:name="id" th:field="*{id_peritaje}"> -->
+					<div th:if="${alert}" th:text="${alert}" class="alert alert-danger" role="alert"></div>
+					<br>
+					<input type="submit" value="Siguiente" class="btn btn-primary">
+	
+				</form>
+				<form th:if="${val} == 'Peritaje'" th:action="@{/write/subir/P/} + ${id}" th:object="${foto}"
+					enctype="multipart/form-data" method="POST">
+					<br>
+	
+					<th:block th:replace="components/form-foto :: foto"></th:block>
+					<!-- <input type="text" th:name="id" th:field="*{id_peritaje}"> -->
+					<div th:if="${alert}" th:text="${alert}" class="alert alert-danger" role="alert"></div>
+					<br>
+					<input type="submit" value="Siguiente" class="btn btn-primary">
+	
+				</form>
+			</div>
 		</div>
 	</div>
 	<script type="text/javascript">
