--- a/src/main/resources/templates/listaDesaparecidos.html
+++ b/src/main/resources/templates/listaDesaparecidos.html
@@ -22,59 +22,61 @@
     <title th:text="'Ausys - '+ ${titulo}"></title>
 </head>
 
-<body>
+<body style="background-color: #b1b7b9;">
     <th:block th:replace="components/navbar :: navbar"></th:block>
     <div class="container">
-        <h1 th:text="${titulo}"></h1>
-        <br>
-        <table class="table">
-            <thead class="thead-dark">
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Tipo</th>
-                    <th scope="col">Nombre</th>
-                    <th scope="col">Apellido</th>
-                    <th scope="col">Fecha Registro</th>
-                    <th scope="col">Acción</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr th:each=" desaPeri: ${desaPeriL}">
-                    <th scope="row" th:text="${desaPeri.id_desaparecido}"></th>
-                    <td th:text="${desaPeri.tipo_de_caso}"></td>
-                    <td th:text="${desaPeri.nombre}"></td>
-                    <td th:text="${desaPeri.apellido}"></td>
-                    <td th:text="${desaPeri.fecha_registro}"></td>
-                    <td>
-                        <div class="d-flex">
-                            <form class="p-1"
-                                th:action="@{/read/verRegistroD/} + ${desaPeri.id_desaparecido} + '/' + ${desaPeri.id_desaperi}"
-                                method="GET">
-                                <input th:name="id_desaparecido" type="hidden" th:value=${desaPeri.id_desaparecido}>
-                                <input th:name="id_desaperi" type="hidden" th:value=${desaPeri.id_desaperi}>
-                                <input th:name="age" type="hidden" th:value=${desaPeri.age}>
-                                <input type="submit" class="btn btn-primary" value="Ver">
-                            </form>
-                            <form class="p-1"
-                                th:action="@{/write/editar/desaparecido/} + ${desaPeri.id_desaparecido} + '/' + ${desaPeri.id_desaperi}"
-                                method="GET">
-                                <input th:name="id_desaparecido" type="hidden" th:value=${desaPeri.id_desaparecido}>
-                                <input th:name="id_desaperi" type="hidden" th:value=${desaPeri.id_desaperi}>
-                                <input type="submit" class="btn btn-success" value="Editar">
-                            </form>
-                            <form class="p-1"
-                                th:action="@{/admin/eliminar/desaparecido/} + ${desaPeri.id_desaparecido} + '/' + ${desaPeri.id_desaperi}"
-                                method="GET">
-                                <input th:name="id_desaparecido" type="hidden" th:value=${desaPeri.id_desaparecido}>
-                                <input th:name="id_desaperi" type="hidden" th:value=${desaPeri.id_desaperi}>
-                                <input type="submit" class="btn btn-danger" value="Eliminar"
-                                    onclick="return confirm('¿Estás seguro que deseas eliminar el resgitro del desaparecido?');">
-                            </form>
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="card" style="padding: 2em;">
+            <h1 th:text="${titulo}"></h1>
+            <br>
+            <table class="table shadow-lg bg-white rounded">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Tipo</th>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Apellido</th>
+                        <th scope="col">Fecha Registro</th>
+                        <th scope="col">Acción</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each=" desaPeri: ${desaPeriL}">
+                        <th scope="row" th:text="${desaPeri.id_desaparecido}"></th>
+                        <td th:text="${desaPeri.tipo_de_caso}"></td>
+                        <td th:text="${desaPeri.nombre}"></td>
+                        <td th:text="${desaPeri.apellido}"></td>
+                        <td th:text="${desaPeri.fecha_registro}"></td>
+                        <td>
+                            <div class="d-flex">
+                                <form class="p-1"
+                                    th:action="@{/read/verRegistroD/} + ${desaPeri.id_desaparecido} + '/' + ${desaPeri.id_desaperi}"
+                                    method="GET">
+                                    <input th:name="id_desaparecido" type="hidden" th:value=${desaPeri.id_desaparecido}>
+                                    <input th:name="id_desaperi" type="hidden" th:value=${desaPeri.id_desaperi}>
+                                    <input th:name="age" type="hidden" th:value=${desaPeri.age}>
+                                    <input type="submit" class="btn btn-primary" value="Ver">
+                                </form>
+                                <form class="p-1"
+                                    th:action="@{/write/editar/desaparecido/} + ${desaPeri.id_desaparecido} + '/' + ${desaPeri.id_desaperi}"
+                                    method="GET">
+                                    <input th:name="id_desaparecido" type="hidden" th:value=${desaPeri.id_desaparecido}>
+                                    <input th:name="id_desaperi" type="hidden" th:value=${desaPeri.id_desaperi}>
+                                    <input type="submit" class="btn btn-success" value="Editar">
+                                </form>
+                                <form class="p-1"
+                                    th:action="@{/admin/eliminar/desaparecido/} + ${desaPeri.id_desaparecido} + '/' + ${desaPeri.id_desaperi}"
+                                    method="GET">
+                                    <input th:name="id_desaparecido" type="hidden" th:value=${desaPeri.id_desaparecido}>
+                                    <input th:name="id_desaperi" type="hidden" th:value=${desaPeri.id_desaperi}>
+                                    <input type="submit" class="btn btn-danger" value="Eliminar"
+                                        onclick="return confirm('¿Estás seguro que deseas eliminar el resgitro del desaparecido?');">
+                                </form>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 
 </body>
