--- a/src/main/resources/templates/IngresarPeritaje2.html
+++ b/src/main/resources/templates/IngresarPeritaje2.html
@@ -21,27 +21,30 @@
     <title th:text="'Ausys - '+ ${titulo}"></title>
 </head>
 
-<body>
+<body style="background-color: #b1b7b9;">
     <th:block th:replace="components/navbar :: navbar"></th:block>
     <div class="container">
-        <h1 th:text="${titulo}"></h1>
-        <div>
-            <form th:action="@{/write/validarPeritaje2}" th:object="${desaPeri}" method="POST">
-                <label for="tipo_de_caso">Tipo de caso: </label>
-                <select th:name="tipo_de_caso" class="form-control" id="casoSelect" th:field="*{tipo_de_caso}">
-                    <option value="col2">Selecciona una opci&oacute;n</option>
-                    <option th:each="caso : ${listaCasos}" th:id="${tipo_de_caso}" th:value="${caso}" th:text="${caso}">
-                    </option>
-                </select>
-                <br>
-                <div th:if="${alert}" class="alert alert-danger" th:text="${alert}" role="alert"></div>
+        <div class="card" style="padding: 2em;">
+            <h1 th:text="${titulo}"></h1>
+            <div>
+                <form th:action="@{/write/validarPeritaje2}" th:object="${desaPeri}" method="POST">
+                    <label for="tipo_de_caso">Tipo de caso: </label>
+                    <select th:name="tipo_de_caso" class="form-control" id="casoSelect" th:field="*{tipo_de_caso}">
+                        <option value="col2">Selecciona una opci&oacute;n</option>
+                        <option th:each="caso : ${listaCasos}" th:id="${tipo_de_caso}" th:value="${caso}"
+                            th:text="${caso}">
+                        </option>
+                    </select>
+                    <br>
+                    <div th:if="${alert}" class="alert alert-danger" th:text="${alert}" role="alert"></div>
 
-                <th:block th:replace="components/form-registros :: registros"></th:block>
-                <input type="hidden" th:field="${peritaje.id_peritaje}" th:value="id_peritaje">
-                <input type="hidden" th:value="${age}" id="age" th:name="edad_estimada">
-                <input type="submit" value="Ingresar Peritaje" class="btn btn-primary">
+                    <th:block th:replace="components/form-registros :: registros"></th:block>
+                    <input type="hidden" th:field="${peritaje.id_peritaje}" th:value="id_peritaje">
+                    <input type="hidden" th:value="${age}" id="age" th:name="edad_estimada">
+                    <input type="submit" value="Ingresar Peritaje" class="btn btn-primary">
 
-            </form>
+                </form>
+            </div>
         </div>
     </div>
 </body>
