--- a/src/main/resources/templates/editarDesaparecido.html
+++ b/src/main/resources/templates/editarDesaparecido.html
@@ -25,39 +25,42 @@
     <title th:text="'Ausys - '+ ${titulo}"></title>
 </head>
 
-<body>
+<body style="background-color: #b1b7b9;">
     <th:block th:replace="components/navbar :: navbar"></th:block>
     <div class="container">
-        <h1 th:text="${titulo}"></h1>
-        <div>
-            <form th:action="@{/write/editar/desaparecido2/} + ${id_desaparecidoParam} + '/' + ${id_desaperiParam}"
-                th:object="${desaparecido}" method="GET">
-
-                <input th:name="id_desaperi" type="hidden" th:value=${id_desaperiParam}>
-
-                <input type="hidden" id="id_desaparecido" th:name="id_desaparecido" th:field="*{id_desaparecido}">
-                
-
-                <label for="nombre_familiar">Nombre de familiar: </label>
-                <input type="text" id="nombre_familiar" th:field="*{nombre_familiar}">
-                <div th:if="${#fields.hasErrors('nombre_familiar')}" th:errors="*{nombre_familiar}"
-                    class="alert alert-danger" role="alert"></div>
-                <br>
-
-                <label for="contacto_familiar">Contacto de familiar: </label>
-                <input type="text" id="contacto_familiar" th:field="*{contacto_familiar}">
-                <div th:if="${#fields.hasErrors('contacto_familiar')}" th:errors="*{contacto_familiar}"
-                    class="alert alert-danger" role="alert"></div>
-                <br>
-                <label for="fecha_nacimiento">Fecha de nacimiento: </label>
-                <input type="text" th:name="fecha_nacimiento" id="datepicker" th:field="*{fecha_nacimiento}">
-                <div th:if="${#fields.hasErrors('fecha_nacimiento')}" th:errors="*{fecha_nacimiento}"
-                    class="alert alert-danger" role="alert"></div>
-                <br>
-                <input type="hidden" th:field="*{municipio.id_municipio}">
-                <br>
-                <input type="submit" value="Siguiente" class="btn btn-primary">
-            </form>
+        <div class="card" style="padding: 2em;">
+        
+            <h1 th:text="${titulo}"></h1>
+            <div>
+                <form th:action="@{/write/editar/desaparecido2/} + ${id_desaparecidoParam} + '/' + ${id_desaperiParam}"
+                    th:object="${desaparecido}" method="GET">
+    
+                    <input th:name="id_desaperi" type="hidden" th:value=${id_desaperiParam}>
+    
+                    <input type="hidden" id="id_desaparecido" th:name="id_desaparecido" th:field="*{id_desaparecido}">
+                    
+    
+                    <label for="nombre_familiar">Nombre de familiar: </label>
+                    <input type="text" id="nombre_familiar" th:field="*{nombre_familiar}">
+                    <div th:if="${#fields.hasErrors('nombre_familiar')}" th:errors="*{nombre_familiar}"
+                        class="alert alert-danger" role="alert"></div>
+                    <br>
+    
+                    <label for="contacto_familiar">Contacto de familiar: </label>
+                    <input type="text" id="contacto_familiar" th:field="*{contacto_familiar}">
+                    <div th:if="${#fields.hasErrors('contacto_familiar')}" th:errors="*{contacto_familiar}"
+                        class="alert alert-danger" role="alert"></div>
+                    <br>
+                    <label for="fecha_nacimiento">Fecha de nacimiento: </label>
+                    <input type="text" th:name="fecha_nacimiento" id="datepicker" th:field="*{fecha_nacimiento}">
+                    <div th:if="${#fields.hasErrors('fecha_nacimiento')}" th:errors="*{fecha_nacimiento}"
+                        class="alert alert-danger" role="alert"></div>
+                    <br>
+                    <input type="hidden" th:field="*{municipio.id_municipio}">
+                    <br>
+                    <input type="submit" value="Siguiente" class="btn btn-primary">
+                </form>
+            </div>
         </div>
     </div>
 
