--- a/src/main/resources/templates/editarPeritaje2.html
+++ b/src/main/resources/templates/editarPeritaje2.html
@@ -21,31 +21,35 @@
     <title th:text="'Ausys - '+ ${titulo}"></title>
 </head>
 
-<body>
+<body style="background-color: #b1b7b9;">
     <th:block th:replace="components/navbar :: navbar"></th:block>
     <div class="container">
-        <h1 th:text="${titulo}"></h1>
-        <div>
-            <form th:action="@{/write/validarEdicion/peritaje2/} + ${id_peritajeParam} + '/' + ${id_desaperiParam}"
-                th:object="${desaPeri}" method="POST">
+        <div class="card" style="padding: 2em;">
 
-                <input th:name="id_desaperi" type="hidden" th:value=${id_desaperiParam}>
-                <input th:name="id_peritaje" type="hidden" th:value=${id_peritajeParam}>
+            <h1 th:text="${titulo}"></h1>
+            <div>
+                <form th:action="@{/write/validarEdicion/peritaje2/} + ${id_peritajeParam} + '/' + ${id_desaperiParam}"
+                    th:object="${desaPeri}" method="POST">
+
+                    <input th:name="id_desaperi" type="hidden" th:value=${id_desaperiParam}>
+                    <input th:name="id_peritaje" type="hidden" th:value=${id_peritajeParam}>
 
 
-                <label for="tipo_de_caso">Tipo de caso: </label>
-                <select class="form-control" id="casoSelect" th:field="*{tipo_de_caso}">
-                    <option value="col2">Selecciona una opci&oacute;n</option>
-                    <option th:each="caso : ${listaCasos}" th:id="${tipo_de_caso}" th:value="${caso}" th:text="${caso}">
-                    </option>
-                </select>
+                    <label for="tipo_de_caso">Tipo de caso: </label>
+                    <select class="form-control" id="casoSelect" th:field="*{tipo_de_caso}">
+                        <option value="col2">Selecciona una opci&oacute;n</option>
+                        <option th:each="caso : ${listaCasos}" th:id="${tipo_de_caso}" th:value="${caso}"
+                            th:text="${caso}">
+                        </option>
+                    </select>
 
-                <th:block th:replace="components/form-registros :: registros"></th:block>
-                <input type="hidden" th:field="*{peritaje.id_peritaje}" th:value="id_peritaje">
-				<input type="hidden" th:value="${age}" id="age" th:name="age">
-                <input type="submit" value="Ingresar Peritaje" class="btn btn-primary">
+                    <th:block th:replace="components/form-registros :: registros"></th:block>
+                    <input type="hidden" th:field="*{peritaje.id_peritaje}" th:value="id_peritaje">
+                    <input type="hidden" th:value="${age}" id="age" th:name="age">
+                    <input type="submit" value="Ingresar Peritaje" class="btn btn-primary">
 
-            </form>
+                </form>
+            </div>
         </div>
     </div>
 
