--- a/src/main/resources/templates/ingresarEspecial.html
+++ b/src/main/resources/templates/ingresarEspecial.html
@@ -21,27 +21,29 @@
     <title th:text="'Ausys - '+ ${titulo}"></title>
 </head>
 
-<body>
+<body style="background-color: #b1b7b9;">
     <th:block th:replace="components/navbar :: navbar"></th:block>
     <div class="container">
-        <h1 th:text="${titulo}"></h1>
-        <div>
-            <form th:if="${val} == 'Desaparecido'" th:action="@{/write/validarEspecialD/} + ${id}"
-                th:object="${especial}" method="POST">
+        <div class="card" style="padding: 2em;">
+            <h1 th:text="${titulo}"></h1>
+            <div>
+                <form th:if="${val} == 'Desaparecido'" th:action="@{/write/validarEspecialD/} + ${id}"
+                    th:object="${especial}" method="POST">
 
-                <th:block th:replace="components/form-especial :: especiales"></th:block>
-                <!-- <input type="text" th:name="id" th:field="*{id_peritaje}"> -->
-                <input type="submit" value="Siguiente" class="btn btn-primary">
+                    <th:block th:replace="components/form-especial :: especiales"></th:block>
+                    <!-- <input type="text" th:name="id" th:field="*{id_peritaje}"> -->
+                    <input type="submit" value="Siguiente" class="btn btn-primary">
 
-            </form>
-            <form th:if="${val} == 'Peritaje'" th:action="@{/write/validarEspecial/} + ${id}" th:object="${especial}"
-                method="POST">
+                </form>
+                <form th:if="${val} == 'Peritaje'" th:action="@{/write/validarEspecial/} + ${id}"
+                    th:object="${especial}" method="POST">
 
-                <th:block th:replace="components/form-especial :: especiales"></th:block>
-                <!-- <input type="text" th:name="id" th:field="*{id_peritaje}"> -->
-                <input type="submit" value="Siguiente" class="btn btn-primary">
+                    <th:block th:replace="components/form-especial :: especiales"></th:block>
+                    <!-- <input type="text" th:name="id" th:field="*{id_peritaje}"> -->
+                    <input type="submit" value="Siguiente" class="btn btn-primary">
 
-            </form>
+                </form>
+            </div>
         </div>
     </div>
 
