--- a/src/main/resources/templates/listaUsuario.html
+++ b/src/main/resources/templates/listaUsuario.html
@@ -22,58 +22,53 @@
     <title th:text="'Ausys - '+ ${titulo}"></title>
 </head>
 
-<body>
+<body style="background-color: #b1b7b9;">
     <th:block th:replace="components/navbar :: navbar"></th:block>
     <div class="container">
-        <h1 th:text="${titulo}"></h1>
-        <br>
-        <table class="table">
-            <thead class="thead-dark">
-                <tr>
-                    <th scope="col">Usuario</th>
-                    <th scope="col">Estado</th>
-                    <th scope="col">Nombre</th>
-                    <th scope="col">Apellido</th>
-                    <th scope="col">Acción</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr th:each=" user: ${users}">
-                    <th scope="row" th:text="${user.username}"></th>
-                    <td th:text="${user.getEstadoDelegate}"></td>
-                    <td th:text="${user.nombre}"></td>
-                    <td th:text="${user.apellido}">
-                    </td>
-                    <td>
-                        <!-- <div class="d-flex">
-                            <form class="p-1"
-                                th:action="@{/read/verRegistro/} + ${desaPeri.id_peritaje} + '/' + ${desaPeri.id_desaperi}"
-                                method="GET">
-                                <input th:name="peritajeName" type="hidden" th:value="${desaPeri.nombre}">
-                                <input th:name="peritajeLastname" type="hidden" th:value="${desaPeri.apellido}">
-                                <input th:name="id_peritaje" type="hidden" th:value=${desaPeri.id_peritaje}>
-                                <input th:name="id_desaperi" type="hidden" th:value=${desaPeri.id_desaperi}>
-                                <input type="submit" class="btn btn-primary" value="Ver">
-                            </form>
-                                -->
-                        <div class="d-flex">
-                            <form class="p-1" th:action="@{/admin/editar/usuario/} + ${user.id_usuario} " method="GET">
-                                <input th:name="id_usuario" hidden th:value=${user.id_usuario}>
-                                <input th:if="${user.enabled_u} == true" type="submit" class="btn btn-success"
-                                    value="Deshabilitar">
-                                <input th:unless="${user.enabled_u} == true" type="submit" class="btn btn-success"
-                                    value="Habilitar">
-                            </form>
-                            <form class="p-1" th:action="@{/admin/eliminar/usuario/} + ${user.id_usuario}" method="GET">
-                                <input th:name="id_usuario" hidden th:value=${user.id_usuario}>
-                                <input type="submit" class="btn btn-danger" value="Eliminar"
-                                    onclick="return confirm('¿Estás seguro que deseas eliminar el usuario?');">
-                            </form>
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="card" style="padding: 2em;">
+
+            <h1 th:text="${titulo}"></h1>
+            <br>
+            <table class="table shadow-lg bg-white rounded">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">Usuario</th>
+                        <th scope="col">Estado</th>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Apellido</th>
+                        <th scope="col">Acción</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each=" user: ${users}">
+                        <th scope="row" th:text="${user.username}"></th>
+                        <td th:text="${user.getEstadoDelegate}"></td>
+                        <td th:text="${user.nombre}"></td>
+                        <td th:text="${user.apellido}">
+                        </td>
+                        <td>
+
+                            <div class="d-flex">
+                                <form class="p-1" th:action="@{/admin/editar/usuario/} + ${user.id_usuario} "
+                                    method="GET">
+                                    <input th:name="id_usuario" hidden th:value=${user.id_usuario}>
+                                    <input th:if="${user.enabled_u} == true" type="submit" class="btn btn-success"
+                                        value="Deshabilitar">
+                                    <input th:unless="${user.enabled_u} == true" type="submit" class="btn btn-success"
+                                        value="Habilitar">
+                                </form>
+                                <form class="p-1" th:action="@{/admin/eliminar/usuario/} + ${user.id_usuario}"
+                                    method="GET">
+                                    <input th:name="id_usuario" hidden th:value=${user.id_usuario}>
+                                    <input type="submit" class="btn btn-danger" value="Eliminar"
+                                        onclick="return confirm('¿Estás seguro que deseas eliminar el usuario?');">
+                                </form>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 
 </body>
